<resources xmlns:tools="http://schemas.android.com/tools">

    <string name="app_name" translatable="false">Instagram Downloader</string>

    <!--AdMob Ads-->
    <string name="admob_app_id" translatable="false">ca-app-pub-3940256099942544~3347511713</string>
    <string name="admob_banner_id" translatable="false">ca-app-pub-3940256099942544/6300978111</string>
    <string name="admob_inter_id" translatable="false">ca-app-pub-3940256099942544/1033173712</string>
    <string name="admob_native_id" translatable="false">ca-app-pub-3940256099942544/2247696110</string>

    <!-- OneSignal ID -->
    <string name="oneSignal_id" translatable="false">8d9c34a3-28e7-4287-9ed1-8a00b1cfb684</string>

    <!-- Email, Privacy, Developer Account -->
    <string name="email_feedback">email@gmail.com</string>
    <string name="policy_url">https://www.google.com/</string>
    <string name="developer_account_link">https://www.google.com/</string>

    <!-- Strings -->
    <string name="getting_downloading_link">Getting Downloading Link...</string>
    <string name="download_started">Download Started</string>
    <string name="yes">Yes</string>
    <string name="want_download_media">Don\'t Want to Download Media from Private Account?</string>
    <string name="rating_promote">We are working hard for a better user experience. \nWe\'d greatly appreciate if you can rate us.</string>
    <string name="rating_title_1">Oh, no!</string>
    <string name="rating_title_2">We like you too!</string>
    <string name="rating_text_1">Please leave us some feedback.</string>
    <string name="rating_text_4">Thanks for your feedback.</string>
    <string name="rating_text_5">The best we can get :)</string>
    <string name="rating_dialog_submit">Submit</string>
    <string name="share_txt">Hey view/download this image</string>
    <string name="share_image_via">Share File via...</string>
    <string name="choose_email">Choose an app</string>
    <string name="feedback">Feed back</string>
    <string name="rating_dialog_feedback_title">Feedback</string>
    <string name="preview">Preview</string>
    <string name="enter_url">Enter Url</string>
    <string name="enter_valid_url">Enter Valid Url</string>
    <string name="app_not_available">App Not Available.</string>
    <string name="no_app_installed">No application found to open this file.</string>
    <string name="no_result">No Result Found</string>
    <string name="drawer_open">open</string>
    <string name="drawer_close">close</string>
    <string name="delete_item">Are you sure you want to delete this item ?</string>
    <string name="file_deleted">File Deleted.</string>
    <string name="cancel">Cancel</string>
    <string name="no_net_conn">No Internet Connection</string>
    <string name="dark_theme">Dark Theme</string>
    <string name="home">Home</string>
    <string name="login">Log in</string>
    <string name="logout">Log out</string>
    <string name="copy_link">COPY LINK</string>
    <string name="_01">01</string>
    <string name="open_facebook_and_copy_link">Open Instagram and copy link</string>
    <string name="paste_link_amp_download">PASTE LINK</string>
    <string name="_02">02</string>
    <string name="open_facebook_downloader_and_paste_link">Open Instagram Downloader and paste link</string>
    <string name="download_video">DOWNLOAD VIDEO</string>
    <string name="_03">03</string>
    <string name="open_facebook_share_link">Open Instagram Downloader click download</string>
    <string name="paste_link">Paste Link</string>
    <string name="download">Download</string>
    <string name="download_folder">Download Save Folder</string>
    <string name="save_folder">/storage/emulated/0/Download/Instagram Downloader</string>
    <string name="login_to_view_stories">Log In To View Stories :</string>
    <string name="help">Help</string>
    <string name="account">Reserve</string>
    <string name="stories">Stories</string>
    <string name="delete">Delete</string>
    <string name="share">Share</string>
    <string name="rate_us">Rate Us</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="more_apps">More Apps</string>
    <string name="settings">Settings</string>
    <string name="how_to_download_video">How to Download Video</string>
    <string name="premium">GET PRO VERSION</string>
    <string name="remove_ads">Permanently Remove All Ads</string>
    <string name="purchase">Remove All Ads For $ 2.99</string>

</resources>
