<?xml version="1.0" encoding="utf-8"?>
<com.github.florent37.shapeofview.shapes.RoundRectView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="?attr/cardBackgroundColor"
    app:shape_roundRect_topLeftRadius="25dp"
    app:shape_roundRect_topRightRadius="25dp"
    android:layout_gravity="bottom"
    android:elevation="2dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="bottom"
        android:background="?attr/backgroundColor">

        <View
            android:layout_width="30dp"
            android:layout_height="5dp"
            android:layout_marginTop="15dp"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/background_submit"/>

        <ImageView
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:src="@drawable/ic_delete"
            app:tint="?attr/tintColor"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/delete_item"
            android:textSize="18sp"
            android:fontFamily="@font/sans"
            android:textColor="?attr/tintColor"
            android:layout_margin="10dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="20dp"
            android:paddingBottom="20dp"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textViewCancel"
                android:layout_width="0dp"
                android:layout_height="45dp"
                android:layout_weight="1"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/background_submit"
                android:fontFamily="@font/sans"
                android:backgroundTint="@color/pasteColor"
                android:gravity="center"
                android:text="@string/cancel"
                android:textSize="18sp"
                android:textColor="@color/white"
                android:clickable="true"
                android:focusable="true" />

            <TextView
                android:id="@+id/textViewDelete"
                android:layout_width="0dp"
                android:layout_height="45dp"
                android:layout_weight="1"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/background_submit"
                android:fontFamily="@font/sans"
                android:backgroundTint="@color/mainColor"
                android:gravity="center"
                android:text="@string/delete"
                android:textSize="18sp"
                android:textColor="@color/white"
                android:clickable="true"
                android:focusable="true" />

        </LinearLayout>

    </LinearLayout>
</com.github.florent37.shapeofview.shapes.RoundRectView>