<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_card_logo"
    android:layout_gravity="bottom"
    android:elevation="2dp">

    <ImageView
        android:id="@+id/imageViewClose"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:padding="8dp"
        android:src="@drawable/ic_baseline_close"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerInParent="true">

        <ImageView
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:src="@drawable/ic_diamond"
            app:tint="@color/white"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/premium"
            android:textSize="16sp"
            android:fontFamily="@font/sans"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:layout_margin="15dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:background="@color/mainColor"
            android:backgroundTint="#19020202"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:orientation="vertical"
            android:gravity="center">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="45dp"
                android:orientation="horizontal"
                android:paddingStart="8dp"
                android:paddingEnd="8dp">

                <ImageView
                    android:layout_width="45dp"
                    android:layout_height="45dp"
                    android:padding="11dp"
                    android:src="@drawable/ic_ads"
                    app:tint="@color/white"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:text="@string/remove_ads"
                    android:textSize="15sp"
                    android:fontFamily="@font/sans"
                    android:textColor="@color/white"
                    android:layout_marginStart="15dp"
                    android:layout_marginEnd="15dp"/>

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/textViewPurchase"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/background_submit"
        android:fontFamily="@font/sans"
        android:backgroundTint="@color/white"
        android:gravity="center"
        android:text="@string/purchase"
        android:textSize="18sp"
        android:textColor="@color/mainColor"
        android:clickable="true"
        android:focusable="true"
        android:layout_marginBottom="30dp"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true"/>

</RelativeLayout>