<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:layout_width="350dp"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:orientation="vertical"
    android:background="@android:color/transparent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.cardview.widget.CardView
        android:layout_width="350dp"
        android:layout_height="480dp"
        android:layout_gravity="center"
        app:cardBackgroundColor="?attr/backgroundColor">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="130dp"
                android:layout_gravity="center_horizontal">

                <ImageView
                    android:id="@+id/lottie"
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:layout_gravity="center"
                    android:src="@drawable/rate_4"/>

            </FrameLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="vertical"
                android:paddingLeft="25dp"
                android:paddingRight="25dp"
                android:paddingBottom="20dp">

                <TextView
                    android:id="@+id/textViewRateTitle"
                    android:textSize="23sp"
                    android:textColor="?attr/textColor"
                    android:gravity="center"
                    android:visibility="gone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/rating_title_1"
                    android:fontFamily="@font/sans"
                    app:layout_constraintTop_toTopOf="parent"/>

                <TextView
                    android:id="@+id/textViewRate"
                    android:textSize="19sp"
                    android:textColor="?attr/textColor"
                    android:gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/rating_promote"
                    android:fontFamily="@font/sans"
                    app:layout_constraintTop_toBottomOf="@+id/textViewRateTitle"
                    app:layout_constraintBottom_toTopOf="@+id/linear_layout_RatingBar"/>

                <LinearLayout
                    android:id="@+id/linear_layout_RatingBar"
                    android:layout_width="match_parent"
                    android:layout_height="46dp"
                    android:gravity="center"
                    android:orientation="horizontal"
                    app:layout_constraintTop_toBottomOf="@+id/textViewRate"
                    app:layout_constraintBottom_toTopOf="@+id/linearLayoutGet">

                    <ImageView
                        android:id="@+id/image_view_star_1"
                        android:layout_width="46dp"
                        android:layout_height="match_parent"
                        android:padding="2dp"
                        android:src="@drawable/ic_round_star" />

                    <ImageView
                        android:id="@+id/image_view_star_2"
                        android:layout_width="46dp"
                        android:layout_height="match_parent"
                        android:padding="2dp"
                        android:src="@drawable/ic_round_star" />

                    <ImageView
                        android:id="@+id/image_view_star_3"
                        android:layout_width="46dp"
                        android:layout_height="match_parent"
                        android:padding="2dp"
                        android:src="@drawable/ic_round_star" />

                    <ImageView
                        android:id="@+id/image_view_star_4"
                        android:layout_width="46dp"
                        android:layout_height="match_parent"
                        android:padding="2dp"
                        android:src="@drawable/ic_round_star" />

                    <ImageView
                        android:id="@+id/image_view_star_5"
                        android:layout_width="46dp"
                        android:layout_height="match_parent"
                        android:padding="2dp"
                        android:src="@drawable/ic_round_star" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/linearLayoutGet"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:gravity="center"
                    android:orientation="horizontal"
                    app:layout_constraintTop_toBottomOf="@+id/linear_layout_RatingBar"
                    app:layout_constraintBottom_toTopOf="@+id/linearLayoutSubmit">

                    <TextView
                        android:textSize="18sp"
                        android:textColor="@color/mainColor"
                        android:gravity="center"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/rating_text_5"
                        android:fontFamily="@font/sans" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="2dp"
                        android:src="@drawable/ic_curve_arrow"
                        app:tint="@color/mainColor"
                        android:layout_marginStart="5dp"
                        android:layout_marginBottom="10dp"/>

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/linearLayoutSubmit"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginBottom="5dp"
                    app:layout_constraintBottom_toBottomOf="parent">

                    <TextView
                        android:id="@+id/text_view_submit"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:textSize="14sp"
                        android:textColor="@color/white"
                        android:gravity="center"
                        android:background="@drawable/background_submit"
                        android:paddingLeft="5dp"
                        android:paddingRight="5dp"
                        android:text="@string/rating_dialog_submit"
                        android:textAllCaps="true"
                        android:fontFamily="@font/sans" />

                </LinearLayout>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>